Added autoload section

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
         "php": ">=5.3",
         "ext-pcntl": "*",
         "ext-posix": "*"
+    },
+    "autoload": {
+        "files": [
+            "GPhpThread.php"
+        ]
     }
 }
